Making sending PR messages optional (#16)

--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -5,9 +5,19 @@ on:
         description: The branch to check out
         required: true
         type: string
+      caller_job_name:
+        default: markdown-linter
+        description: The name of the job that calls this one
+        required: false
+        type: string
       linter_command:
         description: The file or command to run
         required: true
+        type: string
+      notify_pr:
+        default: false
+        description: Whether to notify the PR about failures/success runs
+        required: false
         type: string
 
 jobs:
@@ -25,4 +35,37 @@ jobs:
           bundler-cache: true
 
       - name: Markdown Linter
-        run: ${{ inputs.linter_command }}
+        run: |
+          if ${{ inputs.notify_pr }}; then
+            if ${{ inputs.linter_command }}; then
+              echo "status=success" >> $GITHUB_ENV
+            else
+              echo "status=fail" >> $GITHUB_ENV
+            fi
+          else
+            ${{ inputs.linter_command }}
+          fi
+
+      - id: job_log_url
+        if: github.event_name == 'pull_request' && inputs.notify_pr == 'true'
+        name: Get Job Log URL
+        uses: Tiryoh/gha-jobid-action@v0
+        with:
+          github_token: ${{ secrets.github_token }}
+          job_name: ${{ inputs.caller_job_name }} / ${{ github.job }}
+
+      - if: github.event_name == 'pull_request' && inputs.notify_pr == 'true' && env.status == 'fail'
+        name: Pull Request Failure Comment
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          comment_tag: markdown-linter
+          message: |
+            :warning: Latest run of Markdown Linter **failed**: ${{ steps.job_log_url.outputs.html_url }}
+
+      - if: github.event_name == 'pull_request' && inputs.notify_pr == 'true' && env.status == 'success'
+        name: Pull Request Success Comment
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          comment_tag: markdown-linter
+          message: |
+            :white_check_mark: Latest run of Markdown Linter **succeeded**: ${{ steps.job_log_url.outputs.html_url }}
