--- a/.github/workflows/jekyll-site-html-proofer.yml
+++ b/.github/workflows/jekyll-site-html-proofer.yml
@@ -61,7 +61,7 @@ jobs:
         name: Pull Request Failure Comment
         uses: thollander/actions-comment-pull-request@v3
         with:
-          comment_tag: jekyll-site-html-proofer
+          comment-tag: jekyll-site-html-proofer
           message: |
             :warning: Latest run of Jekyll Site HTML Proofer **failed**: ${{ steps.job_log_url.outputs.html_url }}
 
@@ -69,6 +69,6 @@ jobs:
         name: Pull Request Success Comment
         uses: thollander/actions-comment-pull-request@v3
         with:
-          comment_tag: jekyll-site-html-proofer
+          comment-tag: jekyll-site-html-proofer
           message: |
             :white_check_mark: Latest run of Jekyll Site HTML Proofer **succeeded**: ${{ steps.job_log_url.outputs.html_url }}
